Hook into the MD-SAL for Topology Updates.

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -27,6 +27,10 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <artifactId>opennms-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller.model</groupId>
+      <artifactId>model-topology</artifactId>
+    </dependency>
 
     <!-- Testing Dependencies -->
     <dependency>
